rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  labels:
    app: rollouts-demo
spec:
  replicas: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
        - name: rollouts-demo
          image: "alexmt/rollouts-demo:553aa0d81cb19606c45e1926530076fb29e6726b
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
  strategy:
    blueGreen:
     activeService: rollouts-demo
     previewService: rollouts-demo-preview
 #   canary: 
 #     steps:
 #     - setWeight: 80
 #     - pause: {}
